fix link resolver, change ids from String to Long, dont save link titles